examples/test/testpolicy14936.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14936
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key27: value12
      key39: value16
      key42: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value37
          key26: value26
          key6: value35
      podSelector:
        matchLabels:
          key25: value12
          key35: value0
